// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions orderBookSnapshotUpdate 1`] = `
Object {
  "type": "orderBookSnapshot",
  "value": Object {
    "test": "test",
  },
}
`;

exports[`actions orderBookSubscriptionUpdate 1`] = `
Object {
  "account": "account",
  "pair": "pair",
  "type": "orderBookSubscription",
}
`;

exports[`actions orderBookUpdate 1`] = `
Object {
  "type": "orderBookUpdate",
  "value": Object {
    "test": "test",
  },
}
`;

exports[`actions subscribe 1`] = `
Array [
  Object {
    "account": "0xAccount",
    "pair": "",
    "type": "orderBookSubscription",
  },
  Object {
    "account": "0xAccount",
    "pair": "pair",
    "type": "orderBookSubscription",
  },
]
`;

exports[`actions subscribe 2`] = `
Array [
  Array [
    "pair",
  ],
]
`;

exports[`actions subscribe dummy account 1`] = `
Array [
  Object {
    "account": "0x0000000000000000000000000000000000000000",
    "pair": "",
    "type": "orderBookSubscription",
  },
  Object {
    "account": "0x0000000000000000000000000000000000000000",
    "pair": "pair",
    "type": "orderBookSubscription",
  },
]
`;

exports[`actions subscribe dummy account 2`] = `
Array [
  Array [
    "pair",
  ],
]
`;
